--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <script>
       // Your web app's Firebase configuration
       //Add here
+      const firebaseConfig = {
+  apiKey: "AIzaSyCXSn954yN7CE0m9TXK21lmtzzEjDbAUgA",
+  authDomain: "multiplayer-car-racing-g-76906.firebaseapp.com",
+  databaseURL: "https://multiplayer-car-racing-g-76906.firebaseio.com",
+  projectId: "multiplayer-car-racing-g-76906",
+  storageBucket: "multiplayer-car-racing-g-76906.appspot.com",
+  messagingSenderId: "76974604827",
+  appId: "1:76974604827:web:284dc06f7d59a5e2a6eebe"
+};
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
